<resources>
    <string name="app_name">Gallery App</string>
    <string name="test_text">Aboba</string>
    <string name="welcome_message">Welcome!</string>
    <string name="have_account_text">I already have an account</string>
    <string name="create_account_message">Create an account</string>
    <string name="logo_description">WebAnt Logo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_login_or_password">Forgot login or password?</string>
    <string name="email_hint">Email</string>
    <string name="email_star_hint">Email<font color='@color/red'>*</font></string>
    <string name="password_hint">Password</string>
    <string name="old_password_star_hint">Old Password<font color='@color/red'>*</font></string>
    <string name="confirm_password_star_hint">Confirm Password<font color='@color/red'>*</font></string>
    <string name="user_name_star_hint">User Name<font color='@color/red'>*</font></string>
    <string name="birthday">Birthday</string>
    <string name="error_email">Uncorrected Email</string>
    <string name="error_date">Invalid Date</string>
    <string name="error_password">Password less than 5 characters</string>
    <string name="error_passwords">Passwords are not equals</string>
    <string name="error_fill_blank">Fill blank</string>
    <string name="error_text">There is no pictures.\t\nPleace come back later.</string>
    <string name="error_title">Sorry!</string>
    <string name="cloud_error_email">This is email already used</string>
    <string name="cloud_error_username">This is username already used</string>
    <string name="not_found_key">Not Found</string>
    <string name="empty_error" />
    <string name="notify_fill_all_fields">"Fill all fields!"</string>
    <string name="notify_check_all_fields">Check all the fields for correctness!</string>
    <string name="notify_success_registration">Registration Success!</string>
    <string name="notify_success_sign_in">Sign In Success!</string>
    <string name="notify_exception_no_connection">No connection! Check internet connection and repeat request</string>
    <string name="notify_exception_chache_keys">Empty access keys in chache!</string>
    <string name="notify_exception_no_pagination_photos">This was all photos!</string>
    <string name="notify_dont_know_exception">Un have exception!</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="new_tab_item">New</string>
    <string name="popular_tab_item">Popular</string>
</resources>