<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragmentFocus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolbarLayout"
                layout="@layout/layout_toolbar" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <com.example.galleryapp.custom_ui_objects.UnderlineTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:text="@string/sign_up"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:underlineColor="#CF497E"
                    app:underlineHeight="2dp"
                    app:underlineOffset="7dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="57dp"
                    android:hint="@string/user_name_star_hint"
                    app:endIconDrawable="@drawable/ic_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        style="@style/EditTextStyle" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthdayInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:backgroundTint="@color/black"
                    android:hint="@string/birthday"
                    app:endIconDrawable="@drawable/ic_calendar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthday"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        style="@style/EditTextStyle" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/email_star_hint"
                    app:endIconDrawable="@drawable/ic_mail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/birthdayInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        style="@style/EditTextStyle" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/old_passwordInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/old_password_star_hint"
                    app:endIconDrawable="@drawable/ic_password_eye"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/old_password"
                        style="@style/EditTextStyle" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_passwordInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/confirm_password_star_hint"
                    app:endIconDrawable="@drawable/ic_password_eye"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/old_passwordInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        style="@style/EditTextStyle" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:backgroundTint="@color/black"
                    android:padding="@dimen/padding_button"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirm_passwordInputLayout" />

                <TextView
                    android:id="@+id/signInTextView"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:layout_marginBottom="118dp"
                    android:gravity="center"
                    android:padding="@dimen/padding_button"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signUpButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>